Some fixes for Kinetic Belt